# -V

./: README.md
自适应巡航V1.0/: 民航欧拉自动驾驶控制器和上位机CAN通信协议统一接口20201221.xlsx
自适应巡航V1.0/CAN_driver/: CMakeLists.txt  package.xml
自适应巡航V1.0/CAN_driver/launch/: Motor_CAN.launch
自适应巡航V1.0/CAN_driver/msg/: Motor_Control.msg  Motor_Feedback.msg
自适应巡航V1.0/CAN_driver/src/: Motor_CAN.cpp  Motor_Control.cpp
自适应巡航V1.0/GNSS_driver/: CMakeLists.txt  gnss_data  gnss_data2  package.xml
自适应巡航V1.0/GNSS_driver/global_planner_data/: gnss_data
自适应巡航V1.0/GNSS_driver/include/GNSS_driver/: controlcan.h
自适应巡航V1.0/GNSS_driver/launch/: gnss.launch
自适应巡航V1.0/GNSS_driver/msg/: GNSS_CAN.msg
自适应巡航V1.0/GNSS_driver/save_point_data/: Line_ob.txt  doubleliner.txt  rightdoubleliner.txt  show_1.txt  south.txt  south_ob.txt
自适应巡航V1.0/GNSS_driver/src/: DATA_LINE.cpp  GNSS_CAN.cpp
自适应巡航V1.0/ROSDriver/: CMakeLists.txt
自适应巡航V1.0/ROSDriver/launch/: node_manager.launch
自适应巡航V1.0/base_controller/: CMakeLists.txt  package.xml
自适应巡航V1.0/base_controller/launch/: base_control.launch
自适应巡航V1.0/base_controller/scripts/LQR_controller/: lqr_speed_steer_control.py
自适应巡航V1.0/base_controller/scripts/MIT_controller/: MIT.py  cubic_spline_planner.py
自适应巡航V1.0/base_controller/scripts/MPC_controller/: model_predictive_speed_and_steer_controller.py
自适应巡航V1.0/base_controller/scripts/PID_control/: PID.py  pidcontroller.py
自适应巡航V1.0/base_controller/scripts/improve_purepuresuit/: improve_pure_pursuit.py
自适应巡航V1.0/base_controller/scripts/purepursuit_controller/: pure_pursuit.py
自适应巡航V1.0/base_controller/scripts/stanley_controller/: stanley_controller_k_3.py  stanley_cubic_planning .py
自适应巡航V1.0/base_controller/scripts/stop_work/: stop_work_control.py
自适应巡航V1.0/lidar_perception/car_rviz_model/no_map/: default.urdf
自适应巡航V1.0/local_planner/: CMakeLists.txt  package.xml
自适应巡航V1.0/local_planner/launch/: local_plan.launch
自适应巡航V1.0/local_planner/msg/: localPath.msg
自适应巡航V1.0/local_planner/scripts/Obstacle_avoidance_plannner/: cubic_spline.py  path_planning.py  polynomials.py
自适应巡航V1.0/mems/: CMakeLists.txt
自适应巡航V1.0/mems/data/: 20210115.txt  20210310.txt  20210311.txt  20210312.txt  2021031202.txt  2021031203.txt  20210313.txt  ABC.txt  ABCebt.txt  ABCfinsh.txt
自适应巡航V1.0/mytf/: CMakeLists.txt  package.xml
自适应巡航V1.0/mytf/launch/: mytfs.launch
自适应巡航V1.0/mytf/src/: my_listener.cpp  my_talker.cpp
